Prevent overflows with overflow-wrap: break-word

--- a/_src/assets/styles/base.css
+++ b/_src/assets/styles/base.css
@@ -74,6 +74,7 @@ ul {
 p, li, ul, dd, dt {
     font-size: var(--text-size-regular);
     line-height: var(--line-height-regular);
+    overflow-wrap: break-word;
 
 }
 /*
